[gd_scene load_steps=2 format=3 uid="uid://oqgqq4mpijmn"]

[ext_resource type="Script" path="res://src/round_game/round_results/player_score_panel.gd" id="1_qwim8"]

[node name="PlayerScorePanel" type="MarginContainer"]
script = ExtResource("1_qwim8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Player 1"

[node name="PlayerScore" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
